[package]
name = "udp-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# hal-stream = { git = "ssh://git@github.com/Cube-OS/hal-stream.git"}
hal-stream = { path = "../hal-stream" }
libmath = "0.2.1"
